docs: sync all version references to 0.8.0, add version management checklist
- Update README.md, docs/getting-started.md version refs from 0.4.0 to 0.8.0
- Remove --enable-preview references (no longer needed since v0.8.0)
- Add Version Management section to CLAUDE.md with release checklist
- Add maven-publish plugin to build.gradle.kts for publishToMavenLocal

Signed-off-by: rlaope <piyrw9754@gmail.com>